# SlicerDeepLearningUI

./: .gitignore  CMakeLists.txt  README.md
DeepLearner/: CMakeLists.txt  CheckableComboBox.py  DeepLearner.py  README.md
DeepLearner/DeepLearnerLib/: CONSTANTS.py
DeepLearner/DeepLearnerLib/data_utils/: CustomDataset.py  GeomCnnDataset.py  utils.py
DeepLearner/DeepLearnerLib/models/: cnn_model.py
DeepLearner/DeepLearnerLib/pl_modules/: classifier_modules.py
DeepLearner/DeepLearnerLib/prediction/: predict.py
DeepLearner/DeepLearnerLib/training/: EfficientNetTrainer.py
DeepLearner/Resources/UI/: DeepLearner.ui  DeepLearnerLib.ui
DeepLearner/src/: CONSTANTS.py
DeepLearner/src/checkpoints/: V12_cls.ckpt  epoch=999-step=1999.ckpt
DeepLearner/src/data_utils/: GeomCnnDataset.py  utils.py
DeepLearner/src/models/: cnn_model.py
DeepLearner/src/prediction/: predict.py
DeepLearner/src/training/: EfficientNetTrainer.py
GeometryImage/: CMakeLists.txt  GeometryImage.py  README.md
GeometryImage/Resources/UI/: GeometryImage.ui
GeometryImage/geometry_image/: Dockerfile  README.md  requirements.txt
GeometryImage/geometry_image/Sphere_Template/: sphere_f1280_v642.vtk  sphere_f20480_v10242.vtk  sphere_f20_v12.vtk  sphere_f320_v162.vtk  sphere_f327680_v163842_flat.p  sphere_f5120_v2562.vtk  sphere_f80_v42.vtk  sphere_f81920_v40962.vtk
GeometryImage/geometry_image/tools/: perform_sgim_sampling.py  run.py  vtk_tools.py
Inference/: CMakeLists.txt  Inference.py  README.md
Inference/InferenceLib/: Asynchrony.py  CONSTANTS.py  logic.py
(+75 files in other folders)
